# playground

./: .gitignore  AGENTS.md  README.md  deprecation_pattern_analysis.md  final_bug_analysis.md  find_cutoff_point.py  ideas.md  investigate_nba_api_issue.py  library_fix_options.md  nba_flagrant_fouls.csv  point_differential_analysis.ipynb  pr_description.md  pyproject.toml  scoreboard_v2_deprecation_proposal.py  scoreboard_wrapper.py  test_nba_api_issue_596.py  test_v3_historical.py
ballhog/: README.md  ballhog_metrics.csv  build_leaderboard.py  selfishness_analysis.ipynb
flagrant_fouls/: .gitignore  ANALYSIS_REPORT.md  Notes.md  README.md  data_collection.ipynb  extract_sample_data.py  flagrant_analysis.ipynb  nba_flagrant_fouls.csv  nba_skipped_games.csv  point_differential_analysis.ipynb  quick_extract_250_games.ipynb  run_multivariate_analysis.py
nba_api_issue_validations/: ISSUE_595_ANALYSIS.md  README.md  issue_596_deprecation_demo.ipynb  issue_602_boxscore_normalized_methods.ipynb  issue_602_fix.ipynb  issue_98_get_data_frames_fix.ipynb  test_issue_595.py
